升级maven-compiler-plugin版本到3.8.1，用于支持--add-modules